[metadata]
name = gokinjo
version = attr:gokinjo.__version__
author = momijiame
description = k-NN feature extraction utility
long_description = file:README.md
url = https://github.com/momijiame/gokinjo
license = Apache License, Version 2.0
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
install_requires =
    numpy
    scikit-learn
zip_safe = False
include_package_data = True
packages = find:
entry_points = file:entry_points.cfg

[options.extras_require]
testing =
    pytest
    pytest-flake8
    pytest-cov
    annoy
develop =
    pytest
    pytest-flake8
    pytest-cov
    annoy
    matplotlib
annoy =
    annoy

[options.packages.find]
exclude =
    tests
    examples

[tool:pytest]
addopts =
    -v
    --flake8
    --cov=gokinjo
    --capture=no

[flake8]
exclude =
    .git,
    .eggs,
    __pycache__,
    build,
    dist
max-complexity = 10
max-line-length = 99

[wheel]
universal = 0
